# MaterialEditPython50

./: .gitignore  README.md  conda.yaml  envato_key.bat  hs_runserver.bat  log.py  main.py  mylog.py  pyproject.toml  requirements.txt  router_打开百度网盘下载链接.py  runServer.bat  wuweihua_run_server.bat
MaterialEdit/: __init__.py  fun_ppt_删除备注.py  fun_ppt导出图片.py  fun_创建文件夹结构.py  fun_桌面文件夹操作.py  fun_素材文件夹合并.py  fun_获取路径数字.py  fun_遍历图片.py  get_stem_num.py  setting.py  type.py
Router/: __init__.py  fun_制作详情.py  fun_文件夹操作.py  router_全自动操作.py  router_删除图片.py  router_制作详情.py  router_制作首图.py  router_图片转发.py  router_文件夹操作.py  router_素材下载.py  router_素材合并.py  router_获取图片.py  router_获取素材信息.py
Scripts/: 1-导出PNG.jsx  2-所有图层改名.jsx  test.jsx
envato_down/: fun_auto_file_move.py
fun_ps画册导出/: ps_画册导出.ipynb
fun_字体文件生成图片/: fun_获取一个成语API.py  ip_字体文件生成图片.ipynb  ip_字体文件重命名.ipynb  ip_蜘蛛水印.ipynb
fun_素材文件夹/: __init__.py  export_image.py  image_file.py  image_folder.py  material_action.py  material_base_func.py  material_file.py  material_folder.py  material_info.py  material_sub_folder.py  root_path.py
image_action/: __init__.py  image_action.py  image_add_radius.py  image_crop.py  image_delete_border.py  image_funs.py  image_merge.py  image_shape.py
ipynb/: 00_空白.ipynb  1.json  2.json  3.json  4.json  AI-EPS文件转换成AI文件.ipynb  ai文件对应图片改名.ipynb  avif转jpg.ipynb  chrome原始数据转dict.ipynb  def2.ipynb  default.ipynb  envato下载文件移动到饭桶.ipynb  fun_PS智能图层转换成普通图层.ipynb  fun_windows_窗口操作.py  fun_获取淘宝仓库中的商家编码.ipynb  ipynb_action_上传淘宝.ipynb  ipynb_default.ipynb  ipynb_ppt操作.ipynb  ipynb_requests_删除文件夹.ipynb  (+89 more)
(+1112 files in other folders)
